# acal-subjective

./: README.md  preprocess_data.py  pyproject.toml  train.py  train_active_learning.py
annotator_diversity/: active_learning.py  args.py  datasets.py  metrics.py  query_annotations.py  query_datapoints.py  soft_trainer.py
scripts/active_learning/DICES_overall/: DICES_overall_active_random.sh  DICES_overall_active_uncertainty.sh  DICES_overall_lmin_random.sh  DICES_overall_lmin_uncertainty.sh  DICES_overall_representation_random.sh  DICES_overall_representation_uncertainty.sh  DICES_overall_semdiv_random.sh  DICES_overall_semdiv_uncertainty.sh
scripts/active_learning/DICES_quality/: DICES_quality_active_random.sh  DICES_quality_active_uncertainty.sh  DICES_quality_lmin_random.sh  DICES_quality_lmin_uncertainty.sh  DICES_quality_representation_random.sh  DICES_quality_representation_uncertainty.sh  DICES_quality_semdiv_random.sh  DICES_quality_semdiv_uncertainty.sh
scripts/active_learning/MFTC_betrayal/: MFTC_betrayal_active_random.sh  MFTC_betrayal_active_uncertainty.sh  MFTC_betrayal_lmin_random.sh  MFTC_betrayal_lmin_uncertainty.sh  MFTC_betrayal_representation_random.sh  MFTC_betrayal_representation_uncertainty.sh  MFTC_betrayal_semdiv_random.sh  MFTC_betrayal_semdiv_uncertainty.sh
scripts/active_learning/MFTC_care/: MFTC_care_active_random.sh  (+7 more)
scripts/passive_learning/: DICES_overall.sh  DICES_quality.sh  MFTC_betrayal.sh  MFTC_care.sh  MFTC_loyalty.sh  MHS_dehumanize.sh  MHS_genocide.sh  MHS_respect.sh
tests/: test_data.py  test_kl.py  test_utils.py
(+32 files in other folders)
