[project]
name = "acal-subjective"
description = "Experimental code for analyzing diversity in annotation for moral value classification"
version = "0.0.1"
authors = [
    { name = "Michiel van der Meer", email = "m.t.van.der.meer@liacs.leidenuniv.nl" },
]
dependencies = [
    "ydata_profiling",
    "datasets==2.14.6",
    "pandas==2.0.3",
    "notebook",
    "ipywidgets",
    "black",
    "transformers==4.34.1",
    "torch==2.1.0",
    "wandb==0.15.12",
    "scipy==1.10.1",
    "scikit-learn==1.3.2",
    "ray==2.6.3",
    "accelerate==0.24.0",
    "nltk==3.8.1",
    "sentencepiece==0.1.99"
]

[tool.setuptools]
py-modules = ["annotator_diversity"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"